WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286440
[UnifiedPDF] At certain scales, "Previous Page" context menu option does not navigate to previous page in 2-up continuous mode
https://bugs.webkit.org/show_bug.cgi?id=286440
Summary
[UnifiedPDF] At certain scales, "Previous Page" context menu option does not ...
Abrar Rahman Protyasha
Reported
2025-01-23 14:39:14 PST
rdar://139817364
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-01-23 16:37:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39474
EWS
Comment 2
2025-01-24 01:39:05 PST
Committed
289337@main
(4923f3abc3d5): <
https://commits.webkit.org/289337@main
> Reviewed commits have been landed. Closing PR #39474 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug